<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/zmove"
        android:checkable="true"
        android:title="@string/zmove"
        android:icon="@drawable/ic_zmove"
        android:visible="false"
        android:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/megavolve"
        android:checkable="true"
        android:title="@string/megavolve"
        android:icon="@drawable/ic_mega"
        android:visible="false"
        android:showAsAction="ifRoom|withText">
    </item>
    <item
            android:id="@+id/shifttocenter"
            android:title="@string/shifttocenter"
            android:visible="false">
    </item>
    <item
        android:id="@+id/close"
        android:title="@string/closeBattle">
    </item>
    <item
        android:id="@+id/cancel"
        android:title="@string/cancel">
    </item>
    <item
        android:id="@+id/forfeit"
        android:title="@string/forfeit">
    </item>
    <item
        android:id="@+id/draw"
        android:title="@string/suggest_draw">
    </item>
    <item
        android:id="@+id/sounds"
        android:checkable="true"
        android:title="@string/enable_sounds">
    </item>
    <item
        android:id="@+id/debug"
        android:title="Debug"
        android:enabled="true">
    </item>
</menu>