<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registryroot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_portrait"
    android:orientation="vertical"
    android:padding="4dp" >

    <TextView
        android:id="@+id/registrytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/connecttoserver"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/registrytitle"
        android:text="@string/choosename" >
    </TextView>

    <EditText
        android:id="@+id/nameedit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name"
        android:hint="@string/inputname"
        android:maxLength="20" >
    </EditText>

    <TextView
        android:id="@+id/addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nameedit"
        android:text="@string/chooseaddr" >
    </TextView>

    <EditText
        android:id="@+id/addredit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addr"
        android:hint="@string/inputaddr" >
    </EditText>

    <RelativeLayout
        android:id="@+id/buttonstuff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addredit" >

        <Button
            android:id="@+id/importteambutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teambuilder"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </Button>

        <Button
            android:id="@+id/connectbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/connect" >
        </Button>
        <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true">
        </Button>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/titlestuff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonstuff"
        android:orientation="horizontal"
        android:padding="4dp" >

        <TextView
            android:id="@+id/serv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/serv_name" >
        </TextView>

        <TextView
            android:id="@+id/playernum_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="40dp"
            android:text="@string/players" >
        </TextView>

        <TextView
            android:id="@+id/serv_addr_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/serv_addr" >
        </TextView>
    </LinearLayout>

    <ListView
        android:id="@+id/serverlisting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlestuff"
        android:layout_centerHorizontal="true"
        android:color="#00000000"
		android:cacheColorHint="#00000000"
         >
    </ListView>

</RelativeLayout>